[kyo-ffi] add a binding-trait-driven foreign function interface
Problem: calling native libraries from kyo means platform-specific glue:
java.lang.foreign (Panama) on the JVM, koffi on Node, and Scala Native externs,
each with its own marshalling, lifetime handling, and error mapping. There is no
single safe, cross-platform way to bind a C surface.

Solution: kyo-ffi. You declare a `trait X extends Ffi` of typed method signatures
(primitives, structs from case classes, enums, unions, Handle, Buffer, Borrowed,
callbacks) and a build-time codegen generates the per-platform Impl. The runtime
layers a safe tier over an explicit AllowUnsafe tier, models absence and failure
with Maybe and Result, and runs blocking calls on a Fiber via @Ffi.blocking. Five
modules nested under kyo-ffi/: the runtime (kyo-ffi, JVM/JS/Native), the
TASTy-driven codegen (kyo-ffi/codegen), the sbt plugin that runs it
(kyo-ffi/plugin), a cross-platform integration suite against real C (kyo-ffi/it),
and JMH benchmarks (kyo-ffi/bench).

Notes:
- The off-heap buffer primitives (UnsafeBuffer, UnsafeLayout, BorrowOwner) live in
  kyo-data as a shared foundation that kyo-ffi, and later kyo-offheap and kyo-net,
  build on.
- Adds Fiber.Unsafe.init plus Trace.saved() so unsafe code can spawn a carrier
  fiber for @Ffi.blocking without re-entering the effect system.
- Targets JVM (Panama), JS (koffi), and Native; no Wasm (no stable FFI there).